# drf-auth

./: README.md  db.sqlite3  manage.py  pyproject.toml
app_thingie/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app_thingie/migrations/: 0001_initial.py
my_thingie/: asgi.py  settings.py  urls.py  wsgi.py
